# vertical_search_mcp

./: .gitignore  ANTI_CRAWLER_IMPLEMENTATION_PROMPT.md  ITERATION_TODO.md  LICENSE  Makefile  README.md  README_cn.md  background.md  mcp_server.py  mypy.ini  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt
cli/: __init__.py  cli.py  output.py
config/: __init__.py  anti_crawler.yaml  compression.yaml  platforms.yaml
core/: __init__.py  anti_crawler_detector.py  base_searcher.py  browser_pool.py  cache.py  config_loader.py  content_compressor.py  content_fetcher.py  content_processor.py  delay_manager.py  exceptions.py  initializer.py  logger.py  rate_limiter.py  search_manager.py  task_manager.py  token_estimator.py  url_resolver.py  user_agent_pool.py
docs/: GOOGLE_CUSTOM_SEARCH_DESIGN.md  GOOGLE_CUSTOM_SEARCH_REFACTORING.md  GOOGLE_CUSTOM_SEARCH_SUMMARY.md  ITERATION_10_ASYNC_TASK_DESIGN.md  MCP_REVIEW_2026-01-07.md  MULTI_PLATFORM_SEARCH_DESIGN.md  ROLLING_CONSOLE_HANDLER.md  vertical-search-mcp-design.md  vertical-search-mcp-index.md  vertical-search-mcp-quickstart.md
docs/iterations/: iteration_0.md  iteration_1.md  iteration_10.md  iteration_11.md  iteration_12.md  iteration_2.md  iteration_3.md  iteration_4.md  iteration_5.md  iteration_6.md  iteration_7.md  iteration_8.md  iteration_9.md  overview.md
scripts/: quick_test.py  test_cli_logger.py  test_google.py  test_google_api.py  test_rolling_logger.py  test_weixin.py  test_zhihu.py
tests/: __init__.py
tests/benchmark/: __init__.py  test_performance_diagnosis.py  (+1 more)
(+29 files in other folders)
